Consistent key order in CSL addresses.
[#77977554]

--- a/spec/fixtures/bis_unverified_parties/results.yaml
+++ b/spec/fixtures/bis_unverified_parties/results.yaml
@@ -4,6 +4,9 @@
   :source: UVL
   :addresses:
   - :address: Room 2135, Jingxin Building A, No Dong San Huan North Road, Beijing
+    :city: 
+    :state: 
+    :postal_code: 
     :country: CN
   :alt_names: []
 - :name: Brilliance Technology Ltd
@@ -11,8 +14,14 @@
   :source: UVL
   :addresses:
   - :address: Flat A, 11/F, Adolfo Mansion, 114-116 Austin Road, Tsim Sha Tsui, Kowloon
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   - :address: Rm 1203, 12/F, Hip Kwan Commercial Bldg, 38 Pitt Street, Yau Ma Tei
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
 - :name: Dynasense Photonics Co., Limited
@@ -20,6 +29,9 @@
   :source: UVL
   :addresses:
   - :address: Unit 2209, 22/F, Wu Chung House, 213 Queen's Road East, Wanchai
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
 - :name: Hi-Shine Technology (HK) Limited
@@ -27,8 +39,14 @@
   :source: UVL
   :addresses:
   - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong, Kowloon
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   - :address: Room 603, 6/F, Hang Pont Commercial Building, 31 Tonking Street, Cheung Sha Wan, Kowloon
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
 - :name: Hong Kong Haimao Info-Tec Development Co Ltd
@@ -36,6 +54,9 @@
   :source: UVL
   :addresses:
   - :address: Rm 1013B, Well Fung Ind. Center, Ta Chuen Ping Street, Kwai Chung
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
 - :name: Lianqi (HK) Electronics Co Ltd
@@ -43,6 +64,9 @@
   :source: UVL
   :addresses:
   - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names:
   - Lion Chip Electronics Ltd
@@ -51,8 +75,14 @@
   :source: UVL
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   :alt_names:
   - S2BA
@@ -62,10 +92,19 @@
   :source: UVL
   :addresses:
   - :address: Deguninskaya Street 30, Moscow, Russia
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   - :address: Deguninskaya Street 20, Moscow, Russia
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   - :address: Novoslobodskaya Str. 24/29, Moscow, Russia
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   :alt_names:
   - Training 2 Business Academy
