--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install:
   - wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.2.1.deb && sudo dpkg -i elasticsearch-1.2.1.deb && true
   - sudo service elasticsearch start
 
-#addons:
-#  code_climate:
-#    repo_token: token_goes_here
+addons:
+ code_climate:
+   repo_token: b2be59fc94d6de5b889a16c640227b42d40d8aa21df90fad79dd70f2687d630c
