Fix tests after moving venues into an array

--- a/spec/fixtures/ustda_events/expected_ustda_events.yaml
+++ b/spec/fixtures/ustda_events/expected_ustda_events.yaml
@@ -29,7 +29,7 @@
   - :country: US
     :state: DC
     :city: Washington
-    :venue: ''
+    :venue: 'GreatVenue'
   - :country: US
     :state: PA
     :city: Pittsburgh
