--- a/spec/fixtures/bis_unverified_parties/results.yaml
+++ b/spec/fixtures/bis_unverified_parties/results.yaml
@@ -53,7 +53,7 @@
   :id: b7b7b4366f4441a70c163fe63706375ac2d4d520
   :source: UVL
   :addresses:
-  - :address: Room 201-202, Westin Centre, 26 Hung To Road, Kwun Tong, Hong Kong
+  - :address: Rm 1013B, Well Fung Ind. Center, Ta Chuen Ping Street, Kwai Chung
     :city: 
     :state: 
     :postal_code: 
