Go with orig. DOB string if we cannot convert it.
[#79057400]

--- a/spec/fixtures/ofac_special_designated_nationals/results.yaml
+++ b/spec/fixtures/ofac_special_designated_nationals/results.yaml
@@ -10,12 +10,18 @@
   :vessel_owner: 
   :remarks: 
   :id: '306'
-  :source: 'SDN'
+  :source: SDN
   :source_list_url: 
   :name: BANCO NACIONAL DE CUBA
   :alt_names:
   - BNC
   - NATIONAL BANK OF CUBA
+  :programs:
+  - CUBA
+  :nationalities: []
+  :citizenships: []
+  :dates_of_birth: []
+  :places_of_birth: []
   :addresses:
   - :city: Zurich
     :country: CH
@@ -37,13 +43,7 @@
     :postal_code: 
     :state: 
     :address: Federico Boyd Avenue & 51 Street
-  :programs:
-  - CUBA
   :ids: []
-  :nationalities: []
-  :citizenships: []
-  :dates_of_birth: []
-  :places_of_birth: []
 - :entity_number: '6982'
   :sdn_type: Individual
   :title: 
@@ -55,7 +55,7 @@
   :vessel_owner: 
   :remarks: Additional Djiboutian passport issued in 2010.
   :id: '6982'
-  :source: 'SDN'
+  :source: SDN
   :source_list_url: 
   :name: JIM'ALE, Ahmed Nur Ali
   :alt_names:
@@ -67,6 +67,18 @@
   - JIMALE, Shaykh Ahmed Nur
   - JIMALE, Sheikh Ahmed
   - JUMALE, Ahmed Ali
+  :programs:
+  - SDGT
+  :nationalities:
+  - SO
+  :citizenships:
+  - SO
+  - DJ
+  :dates_of_birth:
+  - '1954-05-20'
+  - 'circa 1954'
+  :places_of_birth:
+  - Eilbur, Somalia
   :addresses:
   - :city: Dubai
     :country: AE
@@ -83,23 +95,12 @@
     :postal_code: 
     :state: 
     :address: 
-  :programs:
-  - SDGT
   :ids:
   - :country: SO
     :expiration_date: '2011-01-23'
     :issue_date: '2001-10-01'
     :number: A0181988
     :type: Passport
-  :nationalities:
-  - SO
-  :citizenships:
-  - SO
-  - DJ
-  :dates_of_birth:
-  - '1954-05-20'
-  :places_of_birth:
-  - Eilbur, Somalia
 - :entity_number: '11043'
   :sdn_type: Vessel
   :title: 
@@ -111,26 +112,26 @@
   :vessel_owner: IRISL
   :remarks: 
   :id: '11043'
-  :source: 'SDN'
+  :source: SDN
   :source_list_url: 
   :name: PARSHAN
   :alt_names:
   - IRAN BRIGHTNESS
   - BRIGHTNESS
   - MARIGOLD
-  :addresses: []
   :programs:
   - NPWMD
+  :nationalities: []
+  :citizenships: []
+  :dates_of_birth: []
+  :places_of_birth: []
+  :addresses: []
   :ids:
   - :country: IR
     :expiration_date: 
     :issue_date: 
     :number: IMO 9051648
     :type: Vessel Registration Identification
-  :nationalities: []
-  :citizenships: []
-  :dates_of_birth: []
-  :places_of_birth: []
 - :entity_number: '521'
   :sdn_type: Individual
   :title: Executive Director, Havana International Bank
@@ -142,27 +143,27 @@
   :vessel_owner: 
   :remarks: Might have something to do with Cuba.
   :id: '521'
-  :source: 'SDN'
+  :source: SDN
   :source_list_url: 
   :name: CHAO, Lazaro R.
   :alt_names: []
-  :addresses:
-  - :city: London
-    :country: GB
-    :postal_code: EC2V 8EY
-    :state: 
-    :address: 20 Ironmonger Lane
   :programs:
   - CUBA
-  :ids:
-  - :country: BE
-    :expiration_date: '2011-12-25'
-    :issue_date: '2001-12-25'
-    :number: ABC123
-    :type: Passport
   :nationalities:
   - DE
   :citizenships:
   - FR
   :dates_of_birth: []
   :places_of_birth: []
+  :addresses:
+  - :city: London
+    :country: GB
+    :postal_code: EC2V 8EY
+    :state: 
+    :address: 20 Ironmonger Lane
+  :ids:
+  - :country: BE
+    :expiration_date: '2011-12-25'
+    :issue_date: '2001-12-25'
+    :number: ABC123
+    :type: Passport
