Improvements to how we decode EL source.
[#79057328]

--- a/spec/fixtures/bis_entities/results.yaml
+++ b/spec/fixtures/bis_entities/results.yaml
@@ -137,7 +137,7 @@
   :source_list_url: http://www.bis.doc.gov/entities/default.htm
   :id: d741e2b6c40aa24508bd53f45fd0b7e76d7a657c
   :alt_names:
-  - "Jawid, SaÂ\x92id Jan Â\x91Abd-al-Salam"
+  - "Jawid, Said Jan Abd-al-Salam"
   :addresses:
   - :address: 'Microrayan 3rd Apt. 45, block #21'
     :city: Kabul
@@ -159,7 +159,7 @@
   :source_list_url: http://www.bis.doc.gov/entities/default.htm
   :id: 6ee67838b242db8f5ec639678c518b8636c57c23
   :alt_names:
-  - "Jawid, SaÂ\x92id Jan Â\x91Abd-al-Salam"
+  - "Jawid, Said Jan Abd-al-Salam"
   :addresses:
   - :address: 'Microrayan 3rd Apt. 45, block #21'
     :city: Kabul
@@ -181,7 +181,7 @@
   :source_list_url: http://www.bis.doc.gov/entities/default.htm
   :id: c04d65011854dc1a2b7ce94a1af2b41ca58d6760
   :alt_names:
-  - "Jawid, SaÂ\x92id Jan Â\x91Abd-al-Salam"
+  - "Jawid, Said Jan Abd-al-Salam"
   :addresses:
   - :address: 'Microrayan 3rd Apt. 45, block #21'
     :city: Kabul
