Ajust DPL and UVL's source_list_url.
[#79113266]

--- a/spec/fixtures/bis_unverified_parties/results.yaml
+++ b/spec/fixtures/bis_unverified_parties/results.yaml
@@ -2,6 +2,7 @@
 - :name: China National Plant Import/Export Co.
   :id: 46a349ebccee946c79b4ae26ca5c76a35ef6f100
   :source: UVL
+  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
   :addresses:
   - :address: Room 2135, Jingxin Building A, No Dong San Huan North Road, Beijing
     :city: 
@@ -12,6 +13,7 @@
 - :name: Brilliance Technology Ltd
   :id: cc91dc115ff25e9f2e3cab1b9d8adf75f5956982
   :source: UVL
+  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
   :addresses:
   - :address: Flat A, 11/F, Adolfo Mansion, 114-116 Austin Road, Tsim Sha Tsui, Kowloon
     :city: 
@@ -27,6 +29,7 @@
 - :name: Dynasense Photonics Co., Limited
   :id: 91b38427499bf36988a61096f665301b890c9ec2
   :source: UVL
+  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
   :addresses:
   - :address: Unit 2209, 22/F, Wu Chung House, 213 Queen's Road East, Wanchai
     :city: 
@@ -37,6 +40,7 @@
 - :name: Hi-Shine Technology (HK) Limited
   :id: 6e18b2585a002248ecb071d5fa8b26cdfd2f4144
   :source: UVL
+  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
   :addresses:
   - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong, Kowloon
     :city: 
@@ -52,6 +56,7 @@
 - :name: Hong Kong Haimao Info-Tec Development Co Ltd
   :id: b7b7b4366f4441a70c163fe63706375ac2d4d520
   :source: UVL
+  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
   :addresses:
   - :address: Rm 1013B, Well Fung Ind. Center, Ta Chuen Ping Street, Kwai Chung
     :city: 
@@ -62,6 +67,7 @@
 - :name: Lianqi (HK) Electronics Co Ltd
   :id: 93d5f755bf946ab838126ffa4cee213d6e55e806
   :source: UVL
+  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
   :addresses:
   - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
     :city: 
@@ -73,6 +79,7 @@
 - :name: Security 2 Business Academy
   :id: 5b5a164dd0e4ca3acb6397dbeb2d5713c4f13f90
   :source: UVL
+  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
     :city: 
@@ -90,6 +97,7 @@
 - :name: T2BA
   :id: c46ba5ffd6da15f8e524b58f59123894bb63e2f8
   :source: UVL
+  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
   :addresses:
   - :address: Deguninskaya Street 30, Moscow, Russia
     :city: 
