EXIM/SBA: Industries empty array if none in source

--- a/spec/fixtures/trade_events/sba/imported_batch_1.yaml
+++ b/spec/fixtures/trade_events/sba/imported_batch_1.yaml
@@ -9,7 +9,7 @@
     starting and financing a business. Visit http://www.wisconsinsbdc.org/Training.htm
   :event_name: Small Business Development Center Maximus [recurring]
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: WI
   :venue: SBDC Locations
@@ -36,7 +36,7 @@
     who are actively doing small business loans SBA resources to help you get ready'
   :event_name: Seattle - SBA Loan Briefing [recurring]
   :event_type: SBA Participating
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: WA
   :venue: SBA Education and Training Center
@@ -62,7 +62,7 @@
     starting and financing a business. Visit http://www.wisconsinsbdc.org/Training.htm
   :event_name: Small Business Development Center Classes
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: maXiMus
   :venue: SBDC Locations
@@ -89,7 +89,7 @@
     actively doing small business loans SBA resources to help you get ready'
   :event_name: Seattle - SBA Loan Briefing
   :event_type: SBA Participating
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: WA
   :venue: SBA Education and Training Center
@@ -115,7 +115,7 @@
     starting and financing a business. Visit http://www.wisconsinsbdc.org/Training.htm
   :event_name: Small Business Development Center Classes
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: WI
   :venue: SBDC Locations
@@ -142,7 +142,7 @@
     actively doing small business loans SBA resources to help you get ready'
   :event_name: Seattle - SBA Loan Briefing
   :event_type: SBA Participating
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: WA
   :venue: SBA Education and Training Center
@@ -168,7 +168,7 @@
     starting and financing a business. Visit http://www.wisconsinsbdc.org/Training.htm
   :event_name: Small Business Development Center Classes
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: WI
   :venue: SBDC Locations
@@ -195,7 +195,7 @@
     actively doing small business loans SBA resources to help you get ready'
   :event_name: Seattle - SBA Loan Briefing
   :event_type: SBA Participating
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: WA
   :venue: SBA Education and Training Center
@@ -221,7 +221,7 @@
     starting and financing a business. Visit http://www.wisconsinsbdc.org/Training.htm
   :event_name: Small Business Development Center Classes
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: WI
   :venue: SBDC Locations
