--- a/spec/fixtures/trade_events/sba/imported_batch_2.yaml
+++ b/spec/fixtures/trade_events/sba/imported_batch_2.yaml
@@ -9,7 +9,7 @@
     the exporting permitting process; finance and insurance and more'
   :event_name: Introductory Export Workshop for Aerospace Suppliers
   :event_type: SBA Participating
-  :industries: 
+  :industries: []
   :registration_link: http://tinyrul.com/Flight14
   :state: CA
   :venue: Flight Path Museum
@@ -36,7 +36,7 @@
     department & company.'
   :event_name: Export Compliance &amp; Documentation Training
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: http://www.duq.edu/sbdc/
   :state: PA
   :venue: Duquesne University Power Center
@@ -60,7 +60,7 @@
     Your Questions Answered, State Resources You Can Use to Sell Your Products Abroad.
   :event_name: SBDC Exporting Workshop
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: https://clients.utahsbdc.org/reg.aspx?mode=event&event=6340028
   :state: UT
   :venue: Orem/Provo SBDC Utah Valley University
@@ -93,7 +93,7 @@
     the SBDC at 607-937-6861 or sbdc@corning-cc.edu.
   :event_name: Understanding Incoterms
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: NY
   :venue: CCC&#039;s Academic &amp; Workforce Development Center
@@ -119,7 +119,7 @@
     by MCLE'
   :event_name: International Sales Contacts Commercial Invoices and Other Doucments
   :event_type: SBA Participating
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: CA
   :venue: Los Angeles Law Library
@@ -146,7 +146,7 @@
     & Awards Luncheon: $65 To register by phone please call 213-580-7548.'
   :event_name: '2014 SBA Small Business Awards &amp; Conference #thenextbigthing'
   :event_type: SBA Sponsored
-  :industries: 
+  :industries: []
   :registration_link: http://events.lachamber.com/sbaweb/events/events.asp?&id=76086&wpid=-101&details=True&date=&cale_id=5206&newsession=TRUE&sid=122646944
   :state: CA
   :venue: The Westin Bonaventure Hotel
@@ -172,7 +172,7 @@
     your sales terms and financing options'
   :event_name: Letters of Credit &amp; International Banking
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: http://www.duq.edu/sbdc/
   :state: PA
   :venue: Duquesne University Power Center
@@ -202,7 +202,7 @@
     is recommended.'
   :event_name: Introduction To Exporting (Tupelo)
   :event_type: Resource Partner
-  :industries: 
+  :industries: []
   :registration_link: 
   :state: MS
   :venue: Renasant Center for IDEAs
