--- a/spec/fixtures/trade_events/exim/trade_events.yaml
+++ b/spec/fixtures/trade_events/exim/trade_events.yaml
@@ -10,7 +10,7 @@
     :city: "Washington"
     :state: "DC"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "44785"
@@ -23,7 +23,7 @@
     :city: "Minneapolis"
     :state: "MN"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "44802"
@@ -36,7 +36,7 @@
     :city: "Washington"
     :state: "DC"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "44800"
@@ -49,7 +49,7 @@
     :city: "Washington"
     :state: "DC"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "42435"
@@ -62,7 +62,7 @@
     :city: "New York"
     :state: "NY"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "42020"
@@ -75,7 +75,7 @@
     :city: "Atlanta"
     :state: "GA"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "43740"
@@ -88,7 +88,7 @@
     :city: "Canary Islands and Africagua"
     :state: null
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "38267"
@@ -101,7 +101,7 @@
     :city: "Baltimore"
     :state: "MD"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "44199"
@@ -114,7 +114,7 @@
     :city: "Bern | Switzerland"
     :state: null
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "42494"
@@ -127,7 +127,7 @@
     :city: "Ft. Lauderdale"
     :state: "FL"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "42437"
@@ -140,7 +140,7 @@
     :city: "Charlotte"
     :state: "North Carolina"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "42439"
@@ -153,7 +153,7 @@
     :city: "Minneapolis"
     :state: "MN"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "42745"
@@ -166,7 +166,7 @@
     :city: "Dubai"
     :state: "United Arab Emirates"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "44886"
@@ -179,7 +179,7 @@
     :city: "Savannah"
     :state: "GA"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "44203"
@@ -192,7 +192,7 @@
     :city: "Baltimore"
     :state: "MD"
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "44201"
@@ -205,7 +205,7 @@
     :city: "The Hague | Netherlands"
     :state: null
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
   -
     :id: "44888"
@@ -218,5 +218,5 @@
     :city: "Atlanta and Oklahoma City"
     :state: null
     :country: null
-    :industries: null
+    :industries: []
     :source: "EXIM"
