--- a/spec/fixtures/screening_lists/uvl/results.yaml
+++ b/spec/fixtures/screening_lists/uvl/results.yaml
@@ -2,7 +2,7 @@
 - :name: China National Plant Import/Export Co.
   :id: 46a349ebccee946c79b4ae26ca5c76a35ef6f100
   :source: UVL
-  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :addresses:
   - :address: Room 2135, Jingxin Building A, No Dong San Huan North Road, Beijing
     :city: 
@@ -13,7 +13,7 @@
 - :name: Brilliance Technology Ltd
   :id: cc91dc115ff25e9f2e3cab1b9d8adf75f5956982
   :source: UVL
-  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :addresses:
   - :address: Flat A, 11/F, Adolfo Mansion, 114-116 Austin Road, Tsim Sha Tsui, Kowloon
     :city: 
@@ -29,7 +29,7 @@
 - :name: Dynasense Photonics Co., Limited
   :id: 91b38427499bf36988a61096f665301b890c9ec2
   :source: UVL
-  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :addresses:
   - :address: Unit 2209, 22/F, Wu Chung House, 213 Queen's Road East, Wanchai
     :city: 
@@ -40,14 +40,16 @@
 - :name: Hi-Shine Technology (HK) Limited
   :id: 6e18b2585a002248ecb071d5fa8b26cdfd2f4144
   :source: UVL
-  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :addresses:
-  - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong, Kowloon
+  - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong,
+      Kowloon
     :city: 
     :state: 
     :postal_code: 
     :country: HK
-  - :address: Room 603, 6/F, Hang Pont Commercial Building, 31 Tonking Street, Cheung Sha Wan, Kowloon
+  - :address: Room 603, 6/F, Hang Pont Commercial Building, 31 Tonking Street, Cheung
+      Sha Wan, Kowloon
     :city: 
     :state: 
     :postal_code: 
@@ -56,7 +58,7 @@
 - :name: Hong Kong Haimao Info-Tec Development Co Ltd
   :id: b7b7b4366f4441a70c163fe63706375ac2d4d520
   :source: UVL
-  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :addresses:
   - :address: Rm 1013B, Well Fung Ind. Center, Ta Chuen Ping Street, Kwai Chung
     :city: 
@@ -67,19 +69,29 @@
 - :name: Lianqi (HK) Electronics Co Ltd
   :id: 93d5f755bf946ab838126ffa4cee213d6e55e806
   :source: UVL
-  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :addresses:
   - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
     :city: 
     :state: 
     :postal_code: 
     :country: HK
-  :alt_names:
-  - Lion Chip Electronics Ltd
+  :alt_names: []
+- :name: Lion Chip Electronics Ltd
+  :id: f117b1dab0d802e5f6c3a02113f67f3f72893a6e
+  :source: UVL
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
+  :addresses:
+  - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
+    :city: 
+    :state: 
+    :postal_code: 
+    :country: HK
+  :alt_names: []
 - :name: Security 2 Business Academy
   :id: 5b5a164dd0e4ca3acb6397dbeb2d5713c4f13f90
   :source: UVL
-  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
     :city: 
@@ -91,19 +103,55 @@
     :state: 
     :postal_code: 
     :country: RU
-  :alt_names:
-  - S2BA
-  - Academy of Business Security
+  :alt_names: []
+- :name: S2BA
+  :id: 8cc44eee211bbc678fa468cfa5d44065b4c5d749
+  :source: UVL
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
+  :addresses:
+  - :address: Deguninskaya Street 10, Moscow
+    :city: 
+    :state: 
+    :postal_code: 
+    :country: RU
+  - :address: Novoslobodskaya Str. 14/19, Moscow
+    :city: 
+    :state: 
+    :postal_code: 
+    :country: RU
+  :alt_names: []
+- :name: Academy of Business Security
+  :id: b5f1189bc3a5d4a969a9980d946f30c9dd74ea84
+  :source: UVL
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
+  :addresses:
+  - :address: Deguninskaya Street 10, Moscow
+    :city: 
+    :state: 
+    :postal_code: 
+    :country: RU
+  - :address: Novoslobodskaya Str. 14/19, Moscow
+    :city: 
+    :state: 
+    :postal_code: 
+    :country: RU
+  :alt_names: []
 - :name: T2BA
   :id: c46ba5ffd6da15f8e524b58f59123894bb63e2f8
   :source: UVL
-  :source_list_url: "http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html"
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :addresses:
   - :address: Deguninskaya Street 30, Moscow, Russia
     :city: 
     :state: 
     :postal_code: 
     :country: RU
+  :alt_names: []
+- :name: Training 2 Business Academy, a.k.a. T2BA, a.k.a. Academy of Business Training
+  :id: 385c6ccf9a8683027c6a981a8467a1ee357a4ee2
+  :source: UVL
+  :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
+  :addresses:
   - :address: Deguninskaya Street 20, Moscow, Russia
     :city: 
     :state: 
@@ -116,4 +164,5 @@
     :country: RU
   :alt_names:
   - Training 2 Business Academy
+  - T2BA
   - Academy of Business Training
